--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   </head>
 
   <body>
-
     <nav>
       <ul>
         <li datta-tabla="tabla-1" class="active">Tabla 1</li>
@@ -29,29 +28,45 @@
         <div class="ctn-filters">
           <div>
             <span>Tipo de Autorización</span>
-            <select>
-              <option value="" hidden>Elige una Autorización</option>
-              <option value="value1">ASS</option>
-              <option value="value2">ASS</option>
-              <option value="value3">ASS</option>
-            </select>
+            <div class="container-select">
+              <div class="select">
+                <span class="selected">ASS</span>
+                <i>expand_more</i>
+              </div>
+              <ul>
+                <li datta-value="ass">ASS</li>
+                <li datta-value="ass">ASS</li>
+                <li datta-value="ass">ESS</li>
+              </ul>
+            </div>
           </div>
           <div>
             <span>Estado</span>
-            <select>
-              <option value="value1">Todos</option>
-              <option value="value2">Activo</option>
-              <option value="value3">Inactivo</option>
-            </select>
+            <div class="container-select">
+              <div class="select">
+                <span class="selected">Estado</span>
+                <i>expand_more</i>
+              </div>
+              <ul>
+                <li datta-value="value1">Todos</li>
+                <li datta-value="value2">Activo</li>
+                <li datta-value="value3">Inactivo</li>
+              </ul>
+            </div>
           </div>
           <div>
             <span>Buscar</span>
-            <select>
-              <option value="" hidden>Buscar</option>
-              <option value="value1">Opción 1</option>
-              <option value="value2">Opción 2</option>
-              <option value="value3">Opción 3</option>
-            </select>
+            <div class="container-select">
+              <div class="select">
+                <span class="selected">Buscar</span>
+                <i>expand_more</i>
+              </div>
+              <ul>
+                <li datta-value="value1">Opción 1</li>
+                <li datta-value="value2">Opción 2</li>
+                <li datta-value="value3">Opción 3</li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="ctn-options">
@@ -87,20 +102,31 @@
           </div>
           <div>
             <span>Estado</span>
-            <select>
-              <option value="value1">Todos</option>
-              <option value="value2">Activo</option>
-              <option value="value3">Inactivo</option>
-            </select>
+            <div class="container-select">
+              <div class="select">
+                <span class="selected">Estado</span>
+                <i>expand_more</i>
+              </div>
+              <ul>
+                <li datta-value="value1">Todos</li>
+                <li datta-value="value2">Activo</li>
+                <li datta-value="value3">Inactivo</li>
+              </ul>
+            </div>
           </div>
           <div>
             <span>Buscar</span>
-            <select>
-              <option value="" hidden>Buscar</option>
-              <option value="value1">Opción 1</option>
-              <option value="value2">Opción 2</option>
-              <option value="value3">Opción 3</option>
-            </select>
+            <div class="container-select">
+              <div class="select">
+                <span class="selected">Buscar</span>
+                <i>expand_more</i>
+              </div>
+              <ul>
+                <li datta-value="value1">Opción 1</li>
+                <li datta-value="value2">Opción 2</li>
+                <li datta-value="value3">Opción 3</li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="ctn-options">
