actualización de estilos

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <span title="Asignar Manual">settings</span>
           <span title="Asignar Automático">autorenew</span>
           <span title="Limpiar">cleaning_services</span>
-          <span title="filtrar">filter_alt</span>
+          <span title="Filtar">filter_alt</span>
           <span title="Exportar">import_export</span>
         </div>
       </div>
@@ -133,7 +133,7 @@
           <span title="Asignar Manual">settings</span>
           <span title="Asignar Automático">autorenew</span>
           <span title="Limpiar">cleaning_services</span>
-          <span title="filtrar">filter_alt</span>
+          <span title="Filtar">filter_alt</span>
           <span title="Exportar">import_export</span>
         </div>
       </div>
